--- a/vault/files/self-cert-gen.sh.jinja
+++ b/vault/files/self-cert-gen.sh.jinja
@@ -32,7 +32,7 @@ root_pem="$root.pem"
 root_key_nopass="$root-nopass.key"
 root_subj="/C={{ vault.self_signed_cert.country }}/ST={{ vault.self_signed_cert.state }}/L={{ vault.self_signed_cert.city }}/O={{ vault.self_signed_cert.org }}/OU={{ vault.self_signed_cert.org_unit }}/CN=$root"
 root_p12="$root.p12"
-ip_sans="$(curl ifconfig.co),127.0.0.1"
+ip_sans="127.0.0.1"
 
 ###
  # Generate the root private key
