--- a/vault/files/vault_upstart.conf.jinja
+++ b/vault/files/vault_upstart.conf.jinja
@@ -19,6 +19,7 @@ script
     -dev \
 {% else %}
     -config="/etc/vault/config/server.hcl" \
+    -tls-skip-verify \
 {% endif -%}
     >>/var/log/vault.log 2>&1
 end script
